@@ -62,6 +62,8 @@ Unreleased changes (1.0-dev)
 19. NUTCH-468 - Scoring filter should distribute score to all outlinks at 
     once. (dogacan)
 
+20. NUTCH-504 - NUTCH-443 broke parsing during fetching. (dogacan)
+
 Release 0.9 - 2007-04-02
 
  1. Changed log4j confiquration to log to stdout on commandline
